pelog/force-app/main/default/objects/PELogConfig__c/PELogConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds configuration for Platform Events Logging.</description>
    <label>PELogConfig</label>
</CustomObject>