pelog/force-app/main/default/objects/PELogConfig__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category to log (e.g. Technical or Business)</description>
    <inlineHelpText>Category to log (e.g. Technical or Business)</inlineHelpText>
    <label>Category</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>