pelog/force-app/main/default/objects/PELogConfig__c/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <description>One of (lowest to highest):
ERROR
WARN
INFO
DEBUG
FINE
FINER
FINEST
Events of any level equal to or lower than the specified level will be logged</description>
    <inlineHelpText>One of (lowest to highest):
ERROR
WARN
INFO
DEBUG
FINE
FINER
FINEST
Events of any level equal to or lower than the specified level will be logged</inlineHelpText>
    <label>Logging Level</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>