pelog/force-app/main/default/objects/PELogConfig__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>either "All" or Salesforce username of the user whose actions we wish to log</description>
    <inlineHelpText>enter "All" or Salesforce username of the user whose actions we wish to log</inlineHelpText>
    <label>User</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>